--- a/templates/layout/base.jade
+++ b/templates/layout/base.jade
@@ -15,6 +15,7 @@ html
 		//- Keystone Stylesheet
 		link(rel="stylesheet", href="/keystone/styles/keystone.min.css")
 		block css
+		link(rel="stylesheet", href="/styles/theme.min.css")
 
 		link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
 		block head
